# ChangeLog for x11-misc/wmakerconf
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/wmakerconf/ChangeLog,v 1.33 2008/05/06 13:44:09 drac Exp $

  06 May 2008; Samuli Suominen <drac@gentoo.org> wmakerconf-2.11.ebuild:
  Move pkgconfig to DEPEND wrt #217278.

  21 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  11 Oct 2006; Krzysiek Pawlik <nelchael@gentoo.org> wmakerconf-2.11.ebuild:
  Add missing dev-util/pkgconfig to DEPEND, see bug #150817.

  21 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  -wmakerconf-2.8.1-r2.ebuild, -wmakerconf-2.9.2.ebuild:
  Removed old version.

  24 Dec 2005; Michael Hanselmann <hansmi@gentoo.org>
  wmakerconf-2.11.ebuild:
  Stable on ppc.

  06 Dec 2005; Luis Medinas <metalgod@gentoo.org> wmakerconf-2.11.ebuild:
  Stable on amd64. Bug #114363.

  06 Dec 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  wmakerconf-2.11.ebuild:
  Stable on sparc

  03 Dec 2005; Krzysiek Pawlik <nelchael@gentoo.org> wmakerconf-2.11.ebuild:
  Stable on x86 (bug 114363).

  03 Nov 2005; Krzysiek Pawlik <nelchael@gentoo.org>
  wmakerconf-2.8.1-r2.ebuild, wmakerconf-2.9.2.ebuild,
  wmakerconf-2.11.ebuild:
  Fixed dodoc not to install COPYING and/or INSTALL.

  07 Aug 2005; Michael Hanselmann <hansmi@gentoo.org>
  wmakerconf-2.9.2.ebuild:
  Stable on ppc.

  27 Jul 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  wmakerconf-2.9.2.ebuild:
  Stable on sparc

  11 Jul 2005; Jason Wever <weeve@gentoo.org> wmakerconf-2.11.ebuild:
  Added ~sparc keyword.

  22 Jun 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  wmakerconf-2.9.2.ebuild:
  To ~sparc

  20 Jun 2005; Jonathan Smith <smithj@gentoo.org> metadata.xml,
  -wmakerconf-2.9.ebuild, wmakerconf-2.9.2.ebuild:
  2.9.2 stable x86;metadata update

  05 Jun 2005; Markus Nigbur <pyrania@gentoo.org> wmakerconf-2.9.2.ebuild:
  Removed homepage commment as it is up again and the x11-wm/windowmaker-0.9*