@@ -1,4 +1,4 @@
-DIST wmakerconf-2.11.tar.gz 791166 RMD160 18d661836272ae21f9d79398359b37b97b0a396a SHA1 2c2409aad8b0348c2801c4350047a5468a800e48 SHA256 bd7e662988c62035f85b7fafee0911a54da87d2d3c5822b035eee4dd1ae81c89
-EBUILD wmakerconf-2.11.ebuild 1189 RMD160 2dbefa3dfeae6aa843c47769955a5e3f6e7ed315 SHA1 d4f68460c0b9868ce4aa25f8d57bfa8200a268a3 SHA256 5821e0b047157fda88ff22f40a39a875d4858a2e1894fe998fa964a5ad1e20fa
-MISC ChangeLog 4022 RMD160 6205ae35359e8a588255fad9aba3c62a092a5c87 SHA1 915cb6ed553e77b7bbf3f2f6f778369cd7c826d3 SHA256 e8ea3df01bd759729938dde545b638981d6c507020770f45b40656c488777fca
-MISC metadata.xml 231 RMD160 edee523a81eb20b171a5dd298e8507ecd49230f6 SHA1 f78294e25f7fd11c0954f753892ece303fc491b3 SHA256 f9af69429b315694d8f6094781bf242d6235450fc58aba6e9e35e28099cc334a
+DIST wmakerconf_2.12.tar.gz 830156 RMD160 e5180b57fb0a77a4dd89953ee86cfe1961f1fe17 SHA1 d878497893f4345c4b9a90d3cf4fa8b26e2b6114 SHA256 debfc3b2a26fd4bd2dab4a06155b786e1b36e64145012410eb0de730a79a9bb3
+EBUILD wmakerconf-2.12.ebuild 1157 RMD160 1c9948dcb69244d1741404a396f548b513efb7bd SHA1 66f7837469d17a08569692b04e6b9a59ad4c6cf7 SHA256 0687268dd469f2ab629ad809c92a0d0f58f1eb4faabb5b49be732c5ceafda6d9
+MISC ChangeLog 4185 RMD160 5a2698f970433448538729a2233f2121f26ca03f SHA1 cae537210fc7b7a2f45f2aff0b4fc1b7b41f7015 SHA256 0e6d57be09d626d24702e41b1bbb9d2fd57c07bd729a1e469034cb75ad581a87
+MISC metadata.xml 160 RMD160 ddb4d678bca64884df87cfab19e00ed9b1ff68a7 SHA1 b3d2981594e6dc70e8f74882cb08b541e1031987 SHA256 264f651f5dc3c8c2d37605e94abe49e6b29b7aed9131e82b473f27e12d67ebe7
