@@ -1,6 +1,12 @@
 # ChangeLog for x11-misc/wmakerconf
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/wmakerconf/ChangeLog,v 1.33 2008/05/06 13:44:09 drac Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/wmakerconf/ChangeLog,v 1.34 2010/06/06 12:26:27 ssuominen Exp $
+
+*wmakerconf-2.12 (06 Jun 2010)
+
+  06 Jun 2010; Samuli Suominen <ssuominen@gentoo.org>
+  +wmakerconf-2.12.ebuild:
+  Version bump wrt #237199 by Dustin Polke.
 
   06 May 2008; Samuli Suominen <drac@gentoo.org> wmakerconf-2.11.ebuild:
   Move pkgconfig to DEPEND wrt #217278.
